541 add endpoints for getting timeseries
